*Scrollbar issues resolved* *Translation pane card issues resolved* *remove footer from the layout and added into last section*

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -31,3 +31,20 @@
 [contenteditable]:focus {
     outline: 0px solid transparent;
 }
+body {
+    overflow-x: hidden;
+    scrollbar-width: none; /* Firefox */
+    scrollbar-color: transparent transparent;
+}
+
+body::-webkit-scrollbar {
+    width: 0 !important; /* Adjust as needed */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Hide scrollbar thumb */
+}
+
+body::-webkit-scrollbar-track {
+    background-color: transparent; /* Hide scrollbar track */
+}
